test/fail_compilation/fail6132c.d
// REQUIRED_ARGS: -w

class S
{
    extern(C) final int clock();
}
